Added sticky headers.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="navigation_drawer_header_content_description">Navigation drawer header logo</string>
 
     <!--Pages-->
+    <string name="page_my_wardrobe">My Wardrobe</string>
     <string name="page_in_closet">In Closet</string>
     <string name="page_kept_away">Kept Away</string>
 
